--- a/index.css
+++ b/index.css
@@ -8,7 +8,9 @@
             justify-content: center;
         }
         main {
+            border: 2px solid rgb(255, 0, 0);
             margin-top: 5%;
+            border-radius: 50px;
             width: 360px;
             height: 480px;
             
@@ -32,17 +34,23 @@
 
         .button{
             display: grid;
-            font-family:'Roboto',sans-serif;
-            border-width: 1.5px;
+            font-family:'Roboto', sans-serif;
+            font-weight: bold;
+            border-radius: 6px;
             margin: auto;
             padding: 5px 5px 5px;
             text-transform: uppercase;
-            font-weight: bold;
             text-align: center;
-            border-color: black;
+            border-color: rgb(0, 0, 0);
         }
         .button:active{ border-color: #BBBBBB; }
         .button-start           { background-color: rgb(16, 175, 2); }
         .button-stop            { background-color: rgb(195, 1, 1); 
                                   color: white; 
                                 }
+
+        .timer{
+            font-family:'Roboto', sans-serif;
+            font-weight: bold;
+            font-size: 40px;
+        }
