--- a/index.css
+++ b/index.css
@@ -1,56 +1,70 @@
 * { margin: 0; padding: 0 }
-        html {
-          min-height: 100%;
-        }
-        body {
-            display: flex;
-            align-content: center;
-            justify-content: center;
-        }
-        main {
-            border: 2px solid rgb(255, 0, 0);
-            margin-top: 5%;
-            border-radius: 50px;
-            width: 360px;
-            height: 480px;
-            
-            background: pink;
-        }
-        .frame {
-            -visibility: collapse;
-            display: none;
-            
-            align-content: stretch;
-            justify-content: center;
-        }
-        .frame > p {
-            margin-top: 30%;
-            text-align: center;
-        }
-        .frame > * {
-            margin-left: 30%;
-            width: 40%;
-        }
-
-        .button{
-            display: grid;
-            font-family:'Roboto', sans-serif;
-            font-weight: bold;
-            border-radius: 6px;
-            margin: auto;
-            padding: 5px 5px 5px;
-            text-transform: uppercase;
-            text-align: center;
-            border-color: rgb(0, 0, 0);
-        }
-        .button:active{ border-color: #BBBBBB; }
-        .button-start           { background-color: rgb(16, 175, 2); }
-        .button-stop            { background-color: rgb(195, 1, 1); 
-                                  color: white; 
-                                }
-
-        .timer{
-            font-family:'Roboto', sans-serif;
-            font-weight: bold;
-            font-size: 40px;
-        }
+html {
+  min-height: 100%;
+  font-family: Helvetica, sans-serif;
+}
+body {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+main {
+    background: pink;
+    border: 2px solid rgb(255, 0, 0);
+    border-radius: 50px;
+    height: 480px;
+    margin-top: 5%;
+    position: absolute;
+    width: 360px;
+}
+.button{
+    display: grid;
+    font-family:'Roboto', sans-serif;
+    font-weight: bold;
+    border-radius: 6px;
+    margin: auto;
+    padding: 5px 5px 5px;
+    text-transform: uppercase;
+    text-align: center;
+    border-color: rgb(0, 0, 0);
+}
+.button:active { border-color: #BBBBBB; }
+.button-start  { background-color: rgb(16, 175, 2); }
+.button-stop { 
+    background-color: rgb(195, 1, 1); 
+    color: white; 
+}
+.frame {
+    -visibility: collapse;
+    display: none;
+    position: absolute;
+    
+    width: 100%;
+    height: 100%;
+    
+    align-content: stretch;
+    justify-content: center;
+}
+.frame > * {
+    margin-left: 30%;
+    width: 40%;
+}
+.frame > p {
+    margin-top: 30%;
+    text-align: center;
+}
+.timer{
+    font-family:'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+}
+#BeginButton {
+    bottom: 16px;
+}
+#SettingsForm > label{
+    text-align: center;
+}
+#TimerMenu > button {
+    margin-bottom: 20px;
+    padding: 10px;
+}
