--- a/index.css
+++ b/index.css
@@ -1,12 +1,18 @@
 * { margin: 0; padding: 0 }
 html {
-  min-height: 100%;
-  font-family: Helvetica, sans-serif;
+    min-height: 100%;
+    font-family: Helvetica, sans-serif;
 }
 body {
-    display: flex;
     align-content: center;
+    display: flex;
     justify-content: center;
+}
+form {
+    text-align: center;
+}
+form > * {
+    margin: 8px;
 }
 main {
     background: pink;
@@ -17,54 +23,59 @@ main {
     position: absolute;
     width: 360px;
 }
-.button{
+.button {
+    border-color: rgb(0, 0, 0);
+    border-radius: 6px;
     display: grid;
     font-family:'Roboto', sans-serif;
     font-weight: bold;
-    border-radius: 6px;
     margin: auto;
-    padding: 5px 5px 5px;
+    margin-top: 16px;
+    -padding: 5px 5px 5px;
+    padding: 10px;
     text-transform: uppercase;
     text-align: center;
-    border-color: rgb(0, 0, 0);
 }
-.button:active { border-color: #BBBBBB; }
-.button-start  { background-color: rgb(16, 175, 2); }
+.button:active { 
+    border-color: #BBBBBB; 
+}
+.button-start  { 
+    background-color: rgb(16, 175, 2); 
+}
 .button-stop { 
     background-color: rgb(195, 1, 1); 
     color: white; 
 }
 .frame {
-    -visibility: collapse;
-    display: none;
-    position: absolute;
-    
-    width: 100%;
-    height: 100%;
-    
     align-content: stretch;
     justify-content: center;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    visibility: collapse;
 }
-.frame > * {
+.contentWrapper > * {
     margin-left: 30%;
     width: 40%;
 }
-.frame > p {
-    margin-top: 30%;
+.contentWrapper > p {
     text-align: center;
 }
-.timer{
+.contentWrapper {
+    margin-top: 20%;
+}
+.timer {
     font-family:'Roboto', sans-serif;
-    font-weight: bold;
     font-size: 40px;
+    font-weight: bold;
 }
 #BeginButton {
     bottom: 16px;
 }
-#SettingsForm > label{
+#SettingsForm > label {
     text-align: center;
 }
 #TimerMenu > button {
-    margin-bottom: 20px;
-    padding: 10px;
+    -margin-bottom: 20px;
+    -padding: 10px;
 }
