--- a/index.css
+++ b/index.css
@@ -16,7 +16,8 @@ form > * {
 }
 main {
     background: #e76f51;
-    border: 2px solid rgb(255, 0, 0);
+    -border: 2px solid rgb(255, 0, 0);
+    border: none;
     border-radius: 50px;
     height: 480px;
     margin-top: 5%;
@@ -24,7 +25,8 @@ main {
     width: 360px;
 }
 .button {
-    border-color: rgb(0, 0, 0);
+    -border-color: rgb(0, 0, 0);
+    border: none;
     border-radius: 6px;
     display: grid;
     font-family:'Roboto', sans-serif;
@@ -36,15 +38,24 @@ main {
     text-transform: uppercase;
     text-align: center;
 }
+.button:hover {
+    background-color: #d5d5d5;
+}
 .button:active { 
-    border-color: #BBBBBB; 
+    -border-color: #BBBBBB; 
 }
 .button-start  { 
     background-color: rgb(16, 175, 2); 
 }
+.button-start:hover  { 
+    background-color: rgb(8, 144, 0); 
+}
 .button-stop { 
     background-color: rgb(195, 1, 1); 
     color: white; 
+}
+.button-stop:hover { 
+    background-color: rgb(152, 1, 1);
 }
 .contentWrapper > * {
     margin-left: 30%;
@@ -67,6 +78,18 @@ main {
 .form-grid-1 {
     grid-row-start: 1;
     grid-row-end: 4;
+}
+.pause-button {
+    background-color: #e9c46a;
+}
+.pause-button:hover {
+    background-color: #F79D65;
+}
+.play-button {
+    background-color: #00A896;
+}
+.play-button:hover {
+    background-color: #00755D;
 }
 .playback-button {
     width:  48px;
