--- a/index.css
+++ b/index.css
@@ -70,11 +70,13 @@ main {
 .button-stop:hover { 
     background-color: rgb(152, 1, 1);
 }
+
 .contentWrapper > * {
     margin-left: 30%;
     width: 40%;
 }
 .contentWrapper > p {
+    white-space: nowrap;
     text-align: center;
     font-weight: bold;
 }
@@ -109,8 +111,55 @@ main {
     width:  48px;
     height: 48px;
 }
-.settings-checkmark {
+.checkmark-container {
     white-space: nowrap;
+    text-align: left;
+}
+/* All checkmark classes below taken and modified from w3schools */
+.checkmark-container > input {
+    opacity: 0;
+}
+.checkmark-container > span {
+    position: absolute;
+    margin-top: 1px;
+    left: 27%;
+    height: 15px;
+    width: 15px;
+    border-radius: 3px;
+    background-color: #eee;
+}
+.checkmark-custom:hover {
+    background-color: #ccc;
+}
+.checkmark-container > input:checked ~ .checkmark-custom {
+    background-color: #2196F3;
+}
+/* Display checkmark when clicked */
+.checkmark-container > input:checked ~ .checkmark-custom:after {
+    display: block;
+}
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark-custom:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+/* Style the checkmark/indicator */
+.checkmark-container > .checkmark-custom:after {
+    left: 5px;
+    top: 1px;
+    width: 3px;
+    height: 7px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.settings-header {
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 .timer {
     font-family:'Roboto', sans-serif;
@@ -142,7 +191,7 @@ main {
     text-align: center;
     margin-left: 20px;
 }
-#SettingsForm> input {
+#SettingsForm > input {
     text-align: center;
 }
 #TimerMenu > button {
