--- a/index.css
+++ b/index.css
@@ -1,20 +1,16 @@
 /* Remove arrows/spinners from input number type */
 /* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button
+{
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
-}
-
-* { margin: 0; padding: 0 }
-html {
-    min-height: 100%;
-    font-family: Helvetica, sans-serif;
+* { 
+    margin: 0; 
+    padding: 0 
 }
 body {
     align-content: center;
@@ -25,11 +21,24 @@ form {
     text-align: center;
 }
 form > * {
-    margin: 8px;
+    margin: 4px;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+}
+h1 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+h2 {
+    margin-top: 10px;
+}
+html {
+    min-height: 100%;
+    font-family: Helvetica, sans-serif;
 }
 main {
     background: #e76f51;
-    -border: 2px solid rgb(255, 0, 0);
     border: none;
     border-radius: 50px;
     height: 480px;
@@ -38,7 +47,8 @@ main {
     width: 360px;
 }
 .button {
-    -border-color: rgb(0, 0, 0);
+    background: #c4c4c4;
+    box-shadow: 2px 2px #222222;
     border: none;
     border-radius: 6px;
     display: grid;
@@ -46,124 +56,102 @@ main {
     font-weight: bold;
     margin: auto;
     margin-top: 16px;
-    -padding: 5px 5px 5px;
     padding: 10px;
     text-transform: uppercase;
     text-align: center;
 }
 .button:hover {
-    background-color: #d5d5d5;
-}
-.button:active { 
-    -border-color: #BBBBBB; 
+    -background-color: #d5d5d5;
+    background-color: #e2e2e2;
+    box-shadow: inset 2px 2px #222222;
+    cursor: pointer;
 }
 .button-start  { 
     background-color: rgb(16, 175, 2); 
-}
-.button-start:hover  { 
-    background-color: rgb(8, 144, 0); 
 }
 .button-stop { 
     background-color: rgb(195, 1, 1); 
     color: white; 
 }
-.button-stop:hover { 
-    background-color: rgb(152, 1, 1);
+.contentWrapper {
+    align-content: center;
+    font-weight: bold;
+    justify-content: center;
+    margin-top: 15%;
+    text-align: center;
 }
-
+.checkmark-container {
+    text-align: left;
+}
 .contentWrapper > * {
-    margin-left: 30%;
-    width: 40%;
+    margin-left: 10%;
+    width: 80%;
 }
 .contentWrapper > p {
-    white-space: nowrap;
     text-align: center;
-    font-weight: bold;
+    white-space: nowrap;
 }
-.contentWrapper {
-    margin-top: 20%;
+.custom-checkbox {
+    background-color: #fcfcfc;
+    border: 1px solid #cacece;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    display: inline-block;
+    margin-left: 15%;
+    padding: 9px;
+    position: relative;
+    -webkit-appearance: none;
+}
+.custom-checkbox:active, .custom-checkbox:checked:active {
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+.custom-checkbox:checked {
+    border: 1px solid #adb8c0;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+    color: #99a1a7;
+}
+.custom-checkbox:checked:after {
+    color: #294147;
+    content: '\2714';
+    font-size: 14px;
+    left: 3px;
+    position: absolute;
+    top: 0px;
 }
 .frame {
     align-content: stretch;
-    justify-content: center;
     height: 100%;
+    justify-content: center;
     position: absolute;
-    width: 100%;
     visibility: collapse;
+    width: 100%;
+}
+.frame p {
+    text-align: center;
 }
 .form-grid-1 {
-    grid-row-start: 1;
     grid-row-end: 4;
+    grid-row-start: 1;
+}
+.form-label {
+    display: block;
 }
 .pause-button {
     background-color: #e9c46a;
 }
-.pause-button:hover {
-    background-color: #F79D65;
-}
 .play-button {
-    background-color: #00A896;
-}
-.play-button:hover {
-    background-color: #00755D;
+    background-color: #60DB32;
 }
 .playback-button {
-    width:  48px;
     height: 48px;
-}
-.checkmark-container {
-    white-space: nowrap;
-    text-align: left;
-}
-/* All checkmark classes below taken and modified from w3schools */
-.checkmark-container > input {
-    opacity: 0;
-}
-.checkmark-container > span {
-    position: absolute;
-    margin-top: 1px;
-    left: 27%;
-    height: 15px;
-    width: 15px;
-    border-radius: 3px;
-    background-color: #eee;
-}
-.checkmark-custom:hover {
-    background-color: #ccc;
-}
-.checkmark-container > input:checked ~ .checkmark-custom {
-    background-color: #2196F3;
-}
-/* Display checkmark when clicked */
-.checkmark-container > input:checked ~ .checkmark-custom:after {
-    display: block;
-}
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark-custom:after {
-    content: "";
-    position: absolute;
-    display: none;
-}
-/* Style the checkmark/indicator */
-.checkmark-container > .checkmark-custom:after {
-    left: 5px;
-    top: 1px;
-    width: 3px;
-    height: 7px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+    width:  48px;
 }
 .settings-header {
-    text-align: center;
-    margin-bottom: 10px;
     font-weight: bold;
+    margin-bottom: 10px;
 }
 .timer {
     font-family:'Roboto', sans-serif;
-    font-size: 40px;
     font-weight: bold;
 }
 #BackToSettingsButton {
@@ -172,30 +160,19 @@ main {
 #BeginButton {
     bottom: 16px;
 }
-/*
-#EnableAudioButton {
-    font-size: 8px;
-    margin: 0 20px 0 7px;
-    white-space: nowrap;
-    padding: 5px;
-}
-#EnableNotifButton {
-    font-size: 8px;
-    margin: 23px 20px 0 7px;
-    white-space: nowrap;
-    padding: 5px;
-}
-*/
 #SettingsForm > label {
-    font-weight: lighter;
-    text-align: center;
+    -font-weight: lighter;
     margin-left: 20px;
 }
 #SettingsForm > input {
     text-align: center;
 }
+#TimeClock {
+    font-size: 60px;
+}
+#TimeLabel {
+    font-size: 45px;
+}
 #TimerMenu > button {
-    -margin-bottom: 20px;
-    -padding: 10px;
     height: 100%;
 }
