--- a/index.css
+++ b/index.css
@@ -25,6 +25,7 @@ form > * {
 }
 input[type=number] {
     -moz-appearance: textfield;
+    font-family: 'Roboto', sans-serif;
 }
 h1 {
     font-size: 2em;
